update macos script